<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="stopPlaying"
        android:text="@string/stop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDealer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/dealer"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/dealerCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/txtYou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/you"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/yourCards"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="10sp"
            android:paddingTop="0dp"
            android:textSize="36sp" />

        <Button
            android:id="@+id/btnHit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="hit"
            android:text="@string/hit" />

        <Button
            android:id="@+id/btnStand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="stand"
            android:text="@string/stand" />

        <Button
            android:id="@+id/doubleDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:onClick="doubleDown"
            android:text="@string/double_down" />
    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:columnCount="3"
        android:orientation="horizontal"
        android:rowCount="3"
        android:visibility="visible">

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/btnTen"
                android:layout_width="109dp"
                android:layout_height="22dp"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/_10_" />

            <RadioButton
                android:id="@+id/btnFifty"
                android:layout_width="110dp"
                android:layout_height="21dp"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/_50_" />

            <RadioButton
                android:id="@+id/btnHundred"
                android:layout_width="110dp"
                android:layout_height="22dp"
                android:layout_row="2"
                android:layout_column="0"
                android:text="@string/_100_" />
        </RadioGroup>

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="214dp"
            android:layout_height="30dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="175dp"
            android:visibility="visible" />

        <EditText
            android:id="@+id/editBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="175dp"
            android:ems="10"
            android:inputType="number" />

        <Button
            android:id="@+id/btnBet"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_marginLeft="175dp"
            android:layout_marginRight="175dp"
            android:onClick="startHand"
            android:text="@string/bet" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="2"
            android:text="@string/all_in" />

        <ToggleButton
            android:id="@+id/betting"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="2"
            android:checked="true"
            android:text="Betting" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="2"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/seekProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:textSize="24sp" />

    </GridLayout>

</LinearLayout>